Tried to fix mobile horiztonal view clipping in CSS.

--- a/styles.css
+++ b/styles.css
@@ -80,16 +80,22 @@
 /* Main CSS section underneath */
 /********************************************/
 
-html, body, main {
-    height: 100%;
+html, body {
     background-color: var(--background-color);
-}
-
-body {
-    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+    width: 100%;
+}
+
+main {
+    max-width: 1080px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
 }
 
 main {
